kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  namespace: jellyfin
spec:
  ports:
    - port: 8989
      protocol: TCP
      targetPort: 8989
  selector:
    app: sonarr
  sessionAffinity: None
  type: ClusterIP
