kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
  name: jellyfin
  namespace: jellyfin
spec:
  ingressClassName: nginx
  rules:
    - host: jellyfin.home.spicedelver.me
      http:
        paths:
          - backend:
              service:
                name: jellyfin-web
                port:
                  number: 8096
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - jellyfin.home.spicedelver.me
      secretName: jellyfin-tls
status:
  loadBalancer:
    ingress:
      - ip: 192.168.2.123
